--- a/src/styles.css
+++ b/src/styles.css
@@ -114,3 +114,56 @@ body {
 .page {
     flex: 1 1 auto;
 }
+
+.button {
+    color: #fff;
+    background-color: #3D96F4;
+    transition: background-color 0.3s ease 0s;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50px;
+    padding: 16px 30px;
+    letter-spacing: 2px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.43;
+}
+
+/*********************************************************************/
+
+.header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+    background-color: rgba(13, 13, 17, 0.7);
+}
+
+.header__container {
+    display: flex;
+    column-gap: 35px;
+    align-items: center;
+    min-height: 116px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.header__menu {
+    flex: 1 1 auto;
+}
+
+.menu__list {
+    display: flex;
+    column-gap: 35px;
+    flex-wrap: wrap;
+    row-gap: 3px;
+    justify-content: flex-end;
+}
+
+.menu__link {
+    display: block;
+    font-size: 16px;
+    color: #fff;
+    line-height: 1.62;
+}
