--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="header__container">
-        <a href="" class="header__logo"><img src="img/logo.svg" alt="logo">
+        <a href="" class="header__logo"><img src="../../assets/imgs/logo.svg" alt="logo">
         </a>
         <nav class="header__menu menu">
             <div class="menu__body">
