--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="wrapper">
   <app-header></app-header>
+  <app-main></app-main>
+  <app-footer></app-footer>
   <router-outlet></router-outlet>
 </div>
