--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,12 +6,16 @@
             <div class="menu__body">
                 <ul class="menu__list">
                     <li class="menu__item"><a href="" class="menu__link">Home</a></li>
-                    <li class="menu__item"><a href="" class="menu__link">Collection</a></li>
-                    <li class="menu__item"><a href="" class="menu__link">Services</a></li>
                     <li class="menu__item"><a href="" class="menu__link">About</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">Pages</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">Services</a></li>
                 </ul>
             </div>
         </nav>
+        <a href="" class="header__cart cart-header">
+            <span class="cart-header__text">Cart</span>
+            <span class="cart-header__quantity">0</span>
+        </a>
         <a href="" class="header__button button">Instagram</a>
         <button class="icon-menu" type="button">
             <span></span>
