--- a/src/styles.css
+++ b/src/styles.css
@@ -389,6 +389,19 @@ body {
     width: 4rem;
 }
 
+.header__logo {
+    padding: 0.4rem;
+    border: 4px solid #1b221e !important;
+    border-radius: 1rem;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+}
+
+.header__logo:hover {
+    border-radius: 50px;
+    border-color: #1fb0d4 !important;
+    transition: all 0.3s ease 0s;
+}
 
 .header__logo,
 .header__cart,
@@ -510,7 +523,7 @@ body {
 
 @media (max-width: 560px) {
     .header__logo {
-        width: 32px;
+
         flex: 0 0 40px;
 
     }
