--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,84 @@
 <main class="page">
+    <section class="page__blog blog">
+        <div class="blog__container">
+            <div class="blog__header header__main">
+
+                <h2 class="header-main__title">See our <br> articles & news</h2>
+                <div class="header-main__body">
+                    <div class="header-main__text">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                            elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                            commodo diam libero.
+                        </p>
+                    </div>
+                    <div class="header-main__actions">
+                        <a href="" class="header-main__button button">All Posts</a>
+                    </div>
+                </div>
+            </div>
+            <div class="blog__items">
+                <article class="blog__item item-blog">
+                    <div class="item-blog__header">
+                        <a href="" class="item-blog__image">
+                            <img src="../../assets/imgs/products/photo_1_2023-06-20_13-59-03.jpg" alt="image">
+                        </a>
+                        <a href="" class="item-blog__category">Limoges</a>
+                    </div>
+                    <div class="item-blog__body">
+
+                        <h4 class="item-blog__title">
+                            <a href="" class="item-blog__link-title">How to Use Social Proof in Marketing</a>
+                        </h4>
+                        <div class="item-blog__text text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lobortis arcu enim urna
+                                adipiscing praesent velit viverra sit semper lorem.</p>
+                        </div>
+                        <a href="" class="item-blog__link">Read now</a>
+                    </div>
+                </article>
+                <article class="blog__item item-blog">
+                    <div class="item-blog__header">
+                        <a href="" class="item-blog__image">
+                            <img src="../../assets/imgs/products/photo_2_2023-06-20_13-59-03.jpg" alt="image">
+                        </a>
+                        <a href="" class="item-blog__category">Limoges</a>
+                    </div>
+                    <div class="item-blog__body">
+                        <div class="item-blog__date">August 28, 2022</div>
+                        <h4 class="item-blog__title">
+                            <a href="" class="item-blog__link-title">Make a great first impression with these titles</a>
+                        </h4>
+                        <div class="item-blog__text text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lobortis arcu enim urna
+                                adipiscing praesent velit viverra sit semper lorem.</p>
+                        </div>
+                        <a href="" class="item-blog__link">Read now</a>
+                    </div>
+                </article>
+                <article class="blog__item item-blog">
+                    <div class="item-blog__header">
+                        <a href="" class="item-blog__image">
+                            <img src="../../assets/imgs/products/photo_4_2023-06-20_13-59-03.jpg" alt="image">
+
+                        </a>
+                        <a href="" class="item-blog__category">Limoges</a>
+                    </div>
+                    <div class="item-blog__body">
+                        <div class="item-blog__date">August 28, 2022</div>
+                        <h4 class="item-blog__title">
+                            <a href="" class="item-blog__link-title">How to Grab Your Reader's Attention</a>
+                        </h4>
+                        <div class="item-blog__text text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lobortis arcu enim urna
+                                adipiscing praesent velit viverra sit semper lorem.</p>
+                        </div>
+                        <a href="" class="item-blog__link">Read now</a>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
     <section class="page__main main">
         <div class="main__container">
             <div class="main__content">
@@ -270,85 +350,7 @@
             </div>
         </div>
     </section>
-    <section class="page__blog blog">
-        <div class="blog__container">
-            <div class="blog__header header__main">
-                <a href="" class="header-main__label">Blog</a>
-                <h2 class="header-main__title">Read our <br> articles & news</h2>
-                <div class="header-main__body">
-                    <div class="header-main__text">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                            elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
-                            commodo diam libero.
-                        </p>
-                    </div>
-                    <div class="header-main__actions">
-                        <a href="" class="header-main__button button">All Posts</a>
-                    </div>
-                </div>
-            </div>
-            <div class="blog__items">
-                <article class="blog__item item-blog">
-                    <div class="item-blog__header">
-                        <a href="" class="item-blog__image">
-                            <img src="img/blog/01.jpg" alt="image">
-                        </a>
-                        <a href="" class="item-blog__category">Social Media</a>
-                    </div>
-                    <div class="item-blog__body">
-                        <div class="item-blog__date">August 28, 2022</div>
-                        <h4 class="item-blog__title">
-                            <a href="" class="item-blog__link-title">How to Use Social Proof in Marketing</a>
-                        </h4>
-                        <div class="item-blog__text text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lobortis arcu enim urna
-                                adipiscing praesent velit viverra sit semper lorem.</p>
-                        </div>
-                        <a href="" class="item-blog__link">Read now</a>
-                    </div>
-                </article>
-                <article class="blog__item item-blog">
-                    <div class="item-blog__header">
-                        <a href="" class="item-blog__image">
-                            <img src="img/blog/02.jpg" alt="image">
-                        </a>
-                        <a href="" class="item-blog__category">SEO</a>
-                    </div>
-                    <div class="item-blog__body">
-                        <div class="item-blog__date">August 28, 2022</div>
-                        <h4 class="item-blog__title">
-                            <a href="" class="item-blog__link-title">Make a great first impression with these titles</a>
-                        </h4>
-                        <div class="item-blog__text text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lobortis arcu enim urna
-                                adipiscing praesent velit viverra sit semper lorem.</p>
-                        </div>
-                        <a href="" class="item-blog__link">Read now</a>
-                    </div>
-                </article>
-                <article class="blog__item item-blog">
-                    <div class="item-blog__header">
-                        <a href="" class="item-blog__image">
-                            <img src="img/blog/03.jpg" alt="image">
-                        </a>
-                        <a href="" class="item-blog__category">Strategy</a>
-                    </div>
-                    <div class="item-blog__body">
-                        <div class="item-blog__date">August 28, 2022</div>
-                        <h4 class="item-blog__title">
-                            <a href="" class="item-blog__link-title">How to Grab Your Reader's Attention</a>
-                        </h4>
-                        <div class="item-blog__text text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lobortis arcu enim urna
-                                adipiscing praesent velit viverra sit semper lorem.</p>
-                        </div>
-                        <a href="" class="item-blog__link">Read now</a>
-                    </div>
-                </article>
-            </div>
-        </div>
-    </section>
+
     <section class="page__start start">
         <div class="start__container">
             <div class="start__body">
