--- a/src/styles.css
+++ b/src/styles.css
@@ -1097,9 +1097,9 @@ body {
 
 .item-blog__category {
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
-    background: rgba(129, 129, 139, 0.5);
+    background: rgba(68, 68, 187, 0.5);
     border-radius: 0px 10px 0px 0px;
     color: #FFF;
     font-size: 14px;
@@ -1116,11 +1116,13 @@ body {
 .item-blog__image img {
     position: absolute;
     width: 100%;
-    height: 100%;
+
     top: 0;
     left: 0;
     object-fit: cover;
 }
+
+.item-blog__image img:hover {}
 
 .item-blog__body {
     padding: 36px 26px;
