--- a/src/styles.css
+++ b/src/styles.css
@@ -1078,13 +1078,13 @@ body {
 
 .blog__items {
     display: grid;
-    gap: 48px;
+    gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
 }
 
 .item-blog {
     background: rgba(129, 129, 139, 0.1);
-    border-radius: 24px;
+    border-radius: 10px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -1100,11 +1100,17 @@ body {
     top: 0;
     left: 0;
     background: rgba(68, 68, 187, 0.5);
-    border-radius: 0px 10px 0px 0px;
-    color: #FFF;
+    border-radius: 0px 0px 10px 0px;
+    color: #f8f2f2;
     font-size: 14px;
     padding: 10px;
     line-height: 1.57;
+}
+
+.item-blog__category:hover {
+
+    background: rgba(4, 4, 26);
+
 }
 
 .item-blog__image {
@@ -1116,7 +1122,7 @@ body {
 .item-blog__image img {
     position: absolute;
     width: 100%;
-
+    height: 100%;
     top: 0;
     left: 0;
     object-fit: cover;
@@ -1169,7 +1175,7 @@ body {
 
 @media(max-width: 1100px) {
     .blog__items {
-        gap: 20px;
+        gap: 1rem;
     }
 
     .item-blog__body {
